- _Novo comando_ `/fazendinha silo`: Veja o silo de sua fazenda, com informações como quantas sementes e plantas tu tem.
- _Novo comando_ `/estatísticas fazendeiro`: Veja as estatísticas das plantações de usuários.
- _Novo comando_ `/estatísticas poker`: Veja as estatísticas de partidas de Poker de usuários.
- _Novo comando_ `/menhera atualizações`: Veja informações da última atualização da Menhera.
- _Novo comando_ `/loja comprar sementes`: Compre diferentes sementes para plantar em sua fazenda.
- _Novo comando_ `/loja vender plantas`: Venda suas plantações para ganhar estrelinhas.
- _Novas opções_ `/loja preços comprar` e `/loja preços vender`. Veja os preços de compra e venda de plantas e sementes.
- Adicionado dois novos comandos! `/top usos comandos` e `/top usos usuários`. Ambos possuem paginação. Cada um desses comandos tem mais dois comandos:
  - `/top usos comandos`
    - "Comandos mais usados" - Veja os comandos mais usados da Menhera
    - "Comandos mais usados de um usuário" - Veja os comandos mais usados de um usuário (O mesmo que o antigo, porém **MUITO RÁPIDO**)
  - `/top usos usuários`
    - "Usuários que mais usaram comandos" - Veja os usuários que mais usaram comandos da Menhera
    - "Usuários que mais usaram um comando específico" - Veja os usuários que mais usaram um comando em específico (deve-se enviar o nome do comando nas opções)

### Changed

- O comando `/perfil` está **MUITO** mais rápido! Tanto na primeira execução, quanto na segunda (na segunda está extremamente rápido, quase instantâneo)
- A página máxima dos tops foram reduzidas de `100` para `99`
- O comando `/top economia` foi renomeado para `/top diversos`
- O comando `/loja vender` foi renomeado para `/loja vender caças`
- Atualizado a descrição dos comandos `/estatísticas`
- O comando `/personalizar temas` agora mostra a data que tu comprou os temas.

### Removed

- O evento de Halloween terminou! Todas mudanças do evento foram revertidas.