@@ -14,6 +14,7 @@ import { executeUsedCommandsTop } from './usedCommands';
 import { executeUsedCommandsFromUserTop } from './usedCommandsFromUser';
 import { executeUserCommandsTop } from './userCommands';
 import { executeUsersByUsedCommandTop } from './usersByUsedCommand';
+import { executePaidTaxesTop } from './paidTaxesTop';
 
 const calculateSkipCount = (page: number): number => (page > 1 ? page - 1 : 0) * 10;
 
@@ -40,7 +41,15 @@ const usersToIgnoreInTop = async (): Promise<string[]> =>
     cacheRepository.getDeletedAccounts(),
   ]).then((a) => a[0].concat(a[1]));
 
-type TopType = 'gambling' | 'hunt' | 'economy' | 'commands' | 'command' | 'user' | 'users';
+type TopType =
+  | 'gambling'
+  | 'hunt'
+  | 'economy'
+  | 'commands'
+  | 'command'
+  | 'user'
+  | 'users'
+  | 'imposto';
 
 const createPaginationButtons = (
   ctx: InteractionContext,
@@ -113,6 +122,8 @@ const executeTopPagination = async (ctx: ComponentInteractionContext): Promise<v
       COLORS.Purple,
     );
   }
+
+  if (command === 'imposto') return executePaidTaxesTop(ctx, Number(page), firstInfo);
 
   if (command === 'commands') return executeUsedCommandsTop(ctx, Number(page), firstInfo);
 
