@@ -14,6 +14,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - _Novo comando_ `/fazendinha silo`: Veja o silo de sua fazenda, com informações como quantas sementes e plantas tu tem.
 - _Novo comando_ `/estatísticas fazendeiro`: Veja as estatísticas das plantações de usuários.
 - _Novo comando_ `/estatísticas poker`: Veja as estatísticas de partidas de Poker de usuários.
+- _Novo comando_ `/top estatísticas impostos`: Veja os usuários que mais pagaram impostos para a Menhera.
 - _Novo comando_ `/menhera atualizações`: Veja informações da última atualização da Menhera.
 - _Novo comando_ `/loja comprar sementes`: Compre diferentes sementes para plantar em sua fazenda.
 - _Novo comando_ `/loja vender plantas`: Venda suas plantações para ganhar estrelinhas.
